--- a/src/pages/ConsolePage.scss
+++ b/src/pages/ConsolePage.scss
@@ -6,7 +6,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  background-color: #0a192f;
+  background-image: url('static/hexmap.png');
+  color: #fff;
   margin: 0px 8px;
   & > div {
     flex-shrink: 0;
@@ -22,6 +24,7 @@
     padding: 8px 16px;
     min-height: 40px;
     .content-title {
+      color: #fff;
       flex-grow: 1;
       display: flex;
       align-items: center;
@@ -138,9 +141,9 @@
         flex-shrink: 0;
         width: 100%;
         overflow: hidden;
-        height: 200px;
+        height: 100px;
         min-height: 0;
-        max-height: 200px;
+        max-height: 100px;
         border-top: 1px solid #e7e7e7;
       }
     }
@@ -276,5 +279,19 @@
         color: currentColor;
       }
     }
+  }
+
+  .explanation {
+    overflow: auto;
+    margin: 20px 0 0;
+    font-size: medium;
+  }
+  .small {
+    font-size: small;
+    color: #64ffda;
+  }
+  .alert {
+    font-size: medium;
+    color: #0f0;
   }
 }
